Updated Serilog COnfig

--- a/src/immersed.flight.planning.app/appsettings.json
+++ b/src/immersed.flight.planning.app/appsettings.json
@@ -1,10 +1,21 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Debug",
+      "Microsoft": "Debug",
+      "Microsoft.Hosting.Lifetime": "Debug"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      { "Name": "Console" }
+    ],
+    "Properties": {
+      "Application": "immersed.flight.planning.app"
+    }
+  }
+
 }
