--- a/deploy/kub8/deployment.yml
+++ b/deploy/kub8/deployment.yml
@@ -25,9 +25,9 @@ spec:
           limits:
             memory: "200Mi"
             cpu: "1"
-        livenessProbe:
-          httpGet:
-            path: /healthz
-            port: 50002
-          initialDelaySeconds: 5
-          periodSeconds: 5
+#        livenessProbe:
+#          httpGet:
+#            path: /healthz
+#            port: 50002
+#          initialDelaySeconds: 5
+#          periodSeconds: 5
