--- a/deploy/kub8/ingress.yml
+++ b/deploy/kub8/ingress.yml
@@ -1,17 +1,20 @@
 apiVersion:  networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: immersed-flight-planning-hello-ingress
+  name: immersed-flight-planning-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   ingressClassName: nginx
   rules:
   - host: kubernetes.docker.internal
     http:
       paths:
-      - path: /flights
+      - path: /flights(/|$)(.*)
         pathType: Prefix
         backend:
           service:
-            name: immersed-flight-planning
+            name: immersed-flight-planning-service
             port: 
               number: 80
